Add IndexMetadataExternal and -Integrated.